k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-book-frontend
  namespace: budget-book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget-book-frontend
  template:
    metadata:
      labels:
        app: budget-book-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/choizeus02/budget-book-frontend:38c626ab61630f823c754816609928e8943e2e93
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: budget-book-frontend
  namespace: budget-book
spec:
  selector:
    app: budget-book-frontend
  ports:
    - port: 80
      targetPort: 80
